Every view drills to the problem, payloads stay bytes, one expression language, technologies declare their settings, and a node has one address