@@ -9,10 +9,34 @@ are normative. The Rust crate, whose source sits aside under `.src`
 Rust-specific types into the ABI: the descriptor, the manifest, the FFI
 shapes and the operate types, section 6's start and validate shapes, section
 7's rule exports (`operate::rule`), section 8's publication reader
-(`operate::publication`) and section 9's audit record (`operate::audit`,
-with `XMIP_EVENT_SOURCE`, the Windows Event Log source, ADR-0062). `examples/conforming.rs`
+(`operate::publication`), section 9's audit record (`operate::audit`,
+with `XMIP_EVENT_SOURCE`, the Windows Event Log source, ADR-0062) and section
+10's four designer exports (`operate::design`: an Xmip Application's routes,
+a filter's structure and text, an edit — ADR-0064), which the VS Code
+extension's language server calls and no .NET surface binds yet, and section
+12's technology catalogue (`operate::catalogue`: the technologies a runtime
+carries and the settings each declares, ADR-0064 amendment 2026-09-26),
+which the language server calls and `RuntimeRules.Catalogue` binds. `examples/conforming.rs`
 builds as a cdylib and is the conforming artifact a loader probe is tested
 against.
+
+Section 11's Events (ADR-0065) are `operate::event` in the Rust crate and are
+bound here for every language that subscribes in process: `c/` shows
+`xmip_operate.h` section 11 from C, with a loader header, an example and a
+test; `include/xmip_event.hpp` is a header-only C++17 wrapper whose
+subscriptions and batches release themselves; `java/` is the `se.xmip.event`
+package over the foreign function and memory API (Java 21 with
+`--enable-preview`); `python/xmip_event` binds it over ctypes; and .NET's is
+`Xmip.Abi`'s `RuntimeEvents`, below. Each binding only crosses the boundary —
+the matching, the authorization, the queue and the audit are
+`xmip-core-event`'s, forwarded by the runtime's library. Each has a test that
+publishes an Event through `xmip_event_publish_v1`, receives it by `next` and
+by callback, and holds publish to receive to a millisecond beside a plain
+thread wake; the Java and Python tests also hold their copies of the header's
+numbers and entrypoint names to the header.
+`./verify-event-bindings.ps1 -Library <runtime library>` builds and runs the C,
+C++, Java and Python tests with zig, the JDK and Python, into the git-ignored
+`build/`.
 
 The .NET binding is here too: `dotnet/Xmip.Abi`, one class library declaring
 both headers for every operator surface — the cli, the PowerShell module and
@@ -33,7 +57,16 @@ topology (`Topology.cs`, the header's values) and run (ADR-0052, amendments
 (`Words`, a `TopologyWord` of the word a publication writes and the name a
 person reads, `observe::topology`'s; ADR-0052, amendment 2026-09-25); and `RuntimeAudit`, section 9, a program's audit record handed
 to `xmip-core-audit` through the runtime's library, with `AuditPhase`,
-`AuditSeverity` and `AuditKept` as the header defines them (ADR-0062). In a
+`AuditSeverity` and `AuditKept` as the header defines them (ADR-0062). Section 11 — Events, subscribed (ADR-0065) — is bound once as
+`RuntimeRules.Events` (`RuntimeEvents`): `Subscribe` returns a disposable
+`EventSubscription` drained with `Next(timeout, max)`, `Listen` calls a
+handler on the runtime's listener thread, and `Publish` hands an Event to
+every matching subscription in the process; `EventRecord`, `EventFilter`,
+`EventAction` and `EventOutcome` are the header's. Section 12 — the
+technologies the runtime carries and what each declares a Location may set —
+is `RuntimeRules.Catalogue` (`RuntimeCatalogue`): `TryRead` brings back the
+header's JSON, every technology or the one named, for the desktop editor's
+Location form. In a
 composed
 estate the project copies the runtime's built library beside everything that
 references it. `AbiBoundaries` says both boundaries at once. `xmip-cli abi`, `status` and
@@ -59,7 +92,13 @@ faces over it.
   a scope, over the runtime's containment, parts, stage words and order;
   `ScopeIndex`, a publication read once as that tree with every answer a
   lookup (ADR-0052, amendment 2026-09-15); `Branch` and `Crumb` for
-  the drill-down, and `ScopeItem` for one row of it.
+  the drill-down, and `ScopeItem` for one row of it — its mood, its figures
+  and the leaf that explains it (`Worst`), the next scope on the way to the
+  cause. Every drill starts at `IOperatorSurface.Root`, the scope the
+  publisher publishes at (a Playground cluster, never the root above it); a
+  stage card counts `IOperatorSurface.Stage` and lists `Locations`, and the
+  prompt's letters are `MessagePath`, each stage its own figure (the owner,
+  2026-09-26: *drill-down does not work and datapoints are wrong*).
 - **Narrowing.** `ScopePattern`, the one wildcard every surface matches with
   (ADR-0059 clauses 7 and 8); `ScopeFilter`, that pattern applied to a
   publication so the views narrow alike and none decides for itself what a
@@ -103,6 +142,13 @@ faces over it.
   and `Permits`, the one rule for connecting and binding alike: HTTPS always,
   plain HTTP to this machine only. `RemoteOperator` presents and checks
   through it, and says a refused certificate in its reason.
+- **Events.** `EventFeed`, what a .NET face subscribes through: it finds the
+  runtime by `RuntimeLibrary`'s one rule, subscribes as a Party's UUID,
+  audits where the program's `ProgramAudit` records go, and `Follow` yields
+  each Event as it arrives until cancelled. The hub is the process's own, so
+  a face hears Events published in the process that loaded the runtime (a
+  node it started, or its own `Publish`); a node elsewhere sends its Events
+  over the wire (`xmip-core-event`'s `wire`).
 - **Audit.** `ProgramAudit`, how every .NET program audits (ADR-0062): its
   name, the directory its configuration names (`Xmip:AuditDirectory`),
   `Record`, `Failed` — one exception, one record — and `WatchUnhandled`, each
